--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -17,7 +17,7 @@
 \usepackage{multirow}
 \usepackage{array}
 \usepackage[normalem]{ulem}
-\usepackage{tikz}
+\usepackage{amsthm}
 
 \renewcommand{\tt} {\texttt}
 
