--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -1,9 +1,90 @@
+@article{Chahine_2006,
+  title={{AIRS: Improving weather forecasting and providing new data on greenhouse gases}},
+  author={Chahine, Moustafa T and Pagano, Thomas S and Aumann, Hartmut H and Atlas, Robert and Barnet, Christopher and Blaisdell, John and Chen, Luke and Divakarla, Murty and Fetzer, Eric J and Goldberg, Mitch and others},
+  journal={Bulletin of the American Meteorological Society},
+  volume={87},
+  pages={911--926},
+  year={2006}
+}
+
+@article{Banerjee_2008,
+  title={Gaussian predictive process models for large spatial data sets},
+  author={Banerjee, Sudipto and Gelfand, Alan E and Finley, Andrew O and Sang, Huiyan},
+  journal={Journal of the Royal Statistical Society: Series B},
+  volume={70},
+  pages={825--848},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@article{Kang_2009,
+  title={Statistical analysis of small-area data based on independence, spatial, non-hierarchical, and hierarchical models},
+  author={Kang, Emily L and Liu, Desheng and Cressie, Noel},
+  journal={Computational Statistics \& Data Analysis},
+  volume={53},
+  pages={3016--3032},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{Lindgren_2011,
+  title       = {An explicit link between {G}aussian fields and {Gaussian Markov random fields: {T}he stochastic partial} differential equation approach},
+  author      = {Lindgren, F. and Rue, H. and Lindstr{\"o}m, J.},
+  journal     = {Journal of the Royal Statistical Society, Series B},
+  year        = {2011},
+  pages       = {423--498},
+  volume      = {73},
+}
+
+@article{Wikle_2005,
+  title={Combining information across spatial scales},
+  author={Wikle, Christopher K and Berliner, L Mark},
+  journal={Technometrics},
+  year={2005},
+  volume=47,
+  pages={80--91}
+}
+
+@article{Cressie_2008,
+        author={Cressie, N. and Johannesson, G.},
+        year={2008},
+        title={{Fixed Rank Kriging} for very large spatial data sets},
+        journal={Journal of the Royal Statistical Society, Series B},
+        volume={70},
+        pages={209--226}
+}
+
+@article{Cressie_2010,
+  title={{Fixed Rank Filtering for spatio-temporal data}},
+  author={Cressie, Noel and Shi, Tao and Kang, Emily L},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={19},
+  pages={724--745},
+  year={2010},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{Lindgren_2015,
+  title={{Bayesian spatial modelling with R-INLA}},
+  author={Lindgren, Finn and Rue, H{\aa}vard},
+  journal={Journal of Statistical Software},
+  volume={63},
+  year={2015}
+}
+
+@article{Katzfuss_2014,
+  title={Parallel inference for massive distributed spatial data using low-rank models},
+  author={Katzfuss, Matthias and Hammerling, Dorit},
+  journal={arXiv preprint arXiv:1402.1472},
+  year={2014}
+}
+
 @article{Zammit_2012,
   title={Variational estimation in spatiotemporal systems from continuous and point-process observations},
   author={Zammit-Mangion, Andrew and Sanguinetti, Guido and Kadirkamanathan, Visakan},
-  journal={Signal Processing, IEEE Transactions on},
+  journal={IEEE Transactions on Signal Processing},
   volume={60},
-  number={7},
   pages={3449--3459},
   year={2012},
   publisher={IEEE}
