--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -7,6 +7,15 @@
   year={2006}
 }
 
+@misc{SuiteSparse,
+  author = {Davis, T.},
+  title = {{SPARSEINV: a MATLAB toolbox for computing the sparse inverse subset using the Takahashi equations}},
+  year = 2011,
+  note = {\texttt{http://faculty.cse.tamu.edu/davis/suitesparse.html}, Online: Last accessed 01 February 2016}
+}
+
+Davis T. , 2011. http://www.cise.ufl.edu/research/sparse/SuiteSparse, Online: Last accessed 28 April 2014.
+
 @article{Banerjee_2008,
   title={Gaussian predictive process models for large spatial data sets},
   author={Banerjee, Sudipto and Gelfand, Alan E and Finley, Andrew O and Sang, Huiyan},
