--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -1416,6 +1416,10 @@ The package \tt{FRK} is designed to address the majority of needs of the spatial
 
 The development page of \tt{FRK} is \tt{https://github.com/andrewzm/FRK}. Users are encourages to report any bugs or issues relating to the package on this page.
 
+\section*{Acknowledgements}
+
+Package devlopment was facilitate with \tt{devtools}, this vignette was created with \tt{knitr}, and package testing was carried out using \tt{testthat} and \tt{covr}. The package includes within it \tt{clipPolys}, from the package \tt{PBSmapping}, some data manipulation functions from \tt{Hmisc} and the functions \tt{rdist} and \tt{rdist.earth} from the package \tt{fields}. Some sparse matrix operations are facilitated using \tt{C} code from the package \tt{SuiteSparse} \citep{SuiteSparse}.
+
 \bibliography{FRK_bib}
 
 \end{document}
