Made EM more efficient

--- a/vignettes/FRK_bib.bib
+++ b/vignettes/FRK_bib.bib
@@ -7,6 +7,16 @@
   year={2006}
 }
 
+@article{Nychka_2015,
+  title={{A multiresolution Gaussian process model for the analysis of large spatial datasets}},
+  author={Nychka, Douglas and Bandyopadhyay, Soutir and Hammerling, Dorit and Lindgren, Finn and Sain, Stephan},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={24},
+  pages={579--599},
+  year={2015},
+  publisher={Taylor \& Francis}
+}
+
 @misc{SuiteSparse,
   author = {Davis, T.},
   title = {{SPARSEINV: a MATLAB toolbox for computing the sparse inverse subset using the Takahashi equations}},
