--- a/vignettes/FRK_intro.Rnw
+++ b/vignettes/FRK_intro.Rnw
@@ -220,7 +220,7 @@ library(knitr)
 \maketitle
 
 \begin{abstract}
-Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with large datasets. Although FRK is relatively straightforward to implement, and despite its extensive use in remote sensing contexts, to date very little software is available to facilitate this task. The present article discusses the development of a new \emph{R} package, \texttt{FRK}, that facilitiates FRK on the most commonly used manifolds ($\mathbb{R}^1, \mathbb{R}^2$ and $\mathbb{S}^2$), both for spatial and spatio-temporal fields. In particular, it provides automatic basis function generation, automatic basic areal unit construction, functionality to incorporate multiple datasets with different supports, an expectation maximisation algorithm for parameter estimation, and functionality for prediction over any user-specified area. Use of the package is illustrated on several small examples using both spatial and spatio-temporal datasets.
+Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with very large datasets. Although FRK is relatively straightforward to implement, and despite its extensive use in remote sensing contexts, to date very little software is available to facilitate this task. The present article discusses the development of a new \emph{R} package, \texttt{FRK}, that facilitiates FRK on the most commonly used manifolds ($\mathbb{R}^1, \mathbb{R}^2$ and $\mathbb{S}^2$), for both spatial and spatio-temporal fields. In particular, it provides automatic basis function generation, automatic basic areal unit construction, functionality to incorporate multiple datasets with different supports, an Expectation Maximisation (EM) algorithm for parameter estimation, and functionality for prediction over any user-specified area. Use of the package is illustrated on several small examples using both spatial and spatio-temporal datasets.
 \end{abstract}
 
 \tableofcontents
@@ -229,34 +229,38 @@ Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction f
 
 \section{Introduction}
 
-Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with large datasets. FRK hinges on the use of a Spatial Random Effects (SRE) model, in which a spatially correlated random effect is decomposed using a set of basis functions. Dimensionality reduction ensures computationally efficient prediction, while the reconstructed random spatial field is, in general, non-stationary. For a detailed treatment of FRK see \cite{Cressie_2008}.
+Fixed Rank Kriging (FRK) is a spatial/spatio-temporal modelling and prediction framework designed for use with large datasets. FRK hinges on the use of a Spatial Random Effects (SRE) model, in which a spatially correlated random spatial field is decomposed using a linear combination of basis functions with random coefficients. Dimensionality reduction ensures computationally efficient prediction, while the reconstructed random spatial field is, in general, non-stationary. For a detailed treatment of FRK, see \cite{Cressie_2008}.
 
-There are numerous R packages available for modelling and prediction with spatial or spatio-temporal data\footnote{see \tt{https://cran.r-project.org/web/views/Spatial.html}.} although relatively few of these make use of basis-function approximation. A few variants of FRK have, however, been developed to date and, of these, the package \tt{LatticeKrig} deserves special mention. \tt{LatticeKrig} uses Wendland basis functions (that have compact support) to decompose the spatially correlated field, and a Markov assumption to construct a (sparse) precision matrix to describe the dependence between the weights of these basis functions (the matrix $\Kmat^{-1}$ in Section \ref{sec:SREModel}). The basis functions can be used to approximate standard families of covariance functions. \tt{LatticeKrig} does not cater for what we term fine-scale process variation, and the finest scale of the process is limited to the finest resolution of the basis functions used (which, however, can be relatively high due to the imposed sparsity). The model employed is also restricted to use precision matrices constructed using Gaussian Markov Random Fields (GMRFs) -- this results in efficient computations and the potential use of a large number ($>4000$) basis functions, but non-stationarity is limited in GMRFs to a spatially-varying variance component or to slowly varying length scales \citep[following the approach of ][]{Lindgren_2011}. In the standard flavour of \tt{FRK} \citep{Cressie_2008}, which we term \emph{vanilla} FRK, there is an explicit reliance on basis functions to give complex non-stationary patterns at the cost of not imposing a Markov assumption. The number of basis functions in vanilla \tt{FRK} is thus limited to a few thousand and thus should be carefully chosen. This package is concerned with the vanilla approach to FRK in \tt{R}; some unpackaged code is available for MATLAB at \tt{http://niasra.uow.edu.au/cei/webprojects/UOW175995.html}.
 
-Other general purpose packages, such as \tt{INLA}, also have the functionality required for FRK. With \tt{INLA}, the basis functions are `tent' functions with the distribution of the weights assumed to be Gaussian with a sparse precision matrix, such that the covariance function of the realised fields is approximately one from the Mat{\'e}rn class \citep[see][for details on software implementation]{Lindgren_2015}. This approach thus shares the same advantages and limitations as \tt{LatticeKrig}. Vanilla FRK can also be implemented with \tt{INLA}; this would, however, require some extra implementation effort, especially if one is modelling both in space and in time. The advantage of \tt{INLA} is that once the basic model is constructed, one has access to all the approximate inference machinery and likelihood models available with the package.
 
-The predictive process approach of \citet{Banerjee_2008} can also be seen as a method of carrying out FRK, where the basis functions are constructed from the postulated covariance function of the spatial random effects \citep[see][for an equivalence argument]{Katzfuss_2014}. An \tt{R} package that implements predictive processes is \tt{spBayes}. \tt{spBayes} allows for multivariate spatial or spatio-temporal fields and both spatial/spatio-temporal processes  and inference is carried out using Markov chain Monte Carlo (MCMC), allowing for a variety of likelihood models. However, basis functions are constructed based on a prespecified covariance model; there is also limited functionality for modelling heterogeneous spatial fields.
+There are numerous R packages available for modelling and prediction with spatial or spatio-temporal data,\footnote{see \tt{https://cran.r-project.org/web/views/Spatial.html}.} although relatively few of these make use of a model with spatial basis functions. A few variants of FRK have, however, been developed to date and, of these, the package \tt{LatticeKrig} \citep{Nychka_2015} deserves special mention. \tt{LatticeKrig} uses Wendland basis functions (that have compact support) to decompose the spatially correlated field, and a Markov assumption to construct a precision matrix  (the matrix $\Kmat^{-1}$ in Section \ref{sec:SREModel}) to describe the dependence between the coefficients of these basis functions. The SRE model has a \red{spatial} covariance functions that is \emph{always} nonnegative-definite, and, because any (possibly non-orthogonal) basis functions can be used, it can be constructed so as to approximate standard families of covariance functions. \tt{LatticeKrig} does not cater for what we term fine-scale process variation, and the finest scale of the process is limited to the finest resolution of the basis functions used (which, however, can be relatively high due to the imposed sparsity). \tt{LatticeKrig}'s model is also restricted to use precision matrices constructed using Gaussian Markov random fields (GMRFs) -- this results in efficient computations and the potential use of a large number ($>4000$) basis functions, \red{but non-stationarity is limited in GMRFs} to a very small number of parameters: a spatially-varying variance component or to slowly varying length scales \citep[following the approach of ][]{Lindgren_2011}. \red{There is one final feature of \tt{LatticeKrig} that allows fast computation but results in an incoherent spatial model. The same random effect can be assigned to two spatial resolutions, where it is assumed statistically independent of itself \citep{Nychka_2015,Bradley_206}. This can only happen in the degenerate case where the random effect is in fact non-random.}
+
+In the standard flavour of \tt{FRK} \citep{Cressie_2008}, which we term \emph{vanilla} FRK, there is an explicit reliance on basis functions to give complex non-stationary patterns at the cost of not imposing a Markov random-field assumption. The number of basis functions in vanilla \tt{FRK} is thus bounded above by a couple of thousand and thus should be carefully chosen. This package is concerned with the vanilla approach to FRK in \tt{R}; some unpackaged MATLAB code is available at \tt{http://niasra.uow.edu.au/cei/webprojects/UOW175995.html}.
+
+Other general purpose packages, such as \tt{INLA}, also have the functionality that FRK requires. With \tt{INLA}, the basis functions are `tent' functions, and the distribution of the coefficients are assumed to be Gaussian with a sparse precision matrix, such that the covariance function of the resulting Gaussian field is approximately one from the Mat{\'e}rn class of spatial covariance functions \citep[see][for details on software implementation]{Lindgren_2015}. \tt{INLA}'s approach thus shares many of the advantages and limitations of \tt{LatticeKrig}. Vanilla FRK can also be implemented with \tt{INLA}; this would, however, require considerable extra implementation effort, especially if one is using spatio-temporal models. The advantage of \tt{INLA} is that once the basic model is constructed, one has access to all the approximate-inference machinery and likelihood models available within the package.
+
+The predictive process approach of \citet{Banerjee_2008} can also be seen as a type of Bayesian FRK, where the basis functions are constructed from the postulated covariance function of the spatial random effects and hence depend on parameters \citep[see][for an equivalence argument]{Katzfuss_2014}. An \tt{R} package that implements predictive processes is \tt{spBayes}. \tt{spBayes} allows for multivariate spatial or spatio-temporal fields, and both spatial/spatio-temporal processes  and Bayesian inference is carried out using Markov chain Monte Carlo (MCMC), allowing for a variety of likelihood models. Because basis functions are constructed based on a prespecified parametric covariance model, they change at each MCMC iteration \red{which results in some computational overhead}.
 
 The aim of the package \tt{FRK} is to considerably facilitate spatial and spatio-temporal analysis based on what, from experience, we deem to be the most `usual' scenario faced by the analyst in the environmental sciences:
 \begin{itemize}
-\item The data has additive Gaussian measurement error, and is available at multiple resolutions (or supports).
-\item The physical process being modelled is either spatial or spatio-temporal, either on $\mathbb{R}^1, \mathbb{R}^2$ or $\mathbb{S}^2$ and is heterogeneous in both space and time.
-\item There is a spatial or spatio-temporal unit, which we term a BAU, at which it is desired to carry out prediction and over which it is acceptable to infer the average of the process.
-\item Datasets can have hundreds of thousands of data points.
-\item It is important to present results from a basic but useful model; following which the use or otherwise of more complex or computationally efficient packages can be assessed.
+\item The data has additive Gaussian measurement error, and is available at multiple spatial resolutions (or supports).
+\item The physical process being modelled is either spatial or spatio-temporal, either on $\mathbb{R}^1, \mathbb{R}^2$ or $\mathbb{S}^2$, and can be heterogeneous in both space and time.
+\item There is a spatial (or spatio-temporal) unit, which we term a Basic Areal Unit (BAU), at which it is desired to carry out prediction and over which it is acceptable to infer the average of the process.
+\item Datasets can have hundreds of thousands of data points and hundreds of thousands of BAUs.
+\item The extent, or nature, of spatial heterogeneity can vary greatly between one application and the next. A useful class of models for the analyst would thus be  one which is quite basic but that can also offer considerably flexibility (such as the SRE class).
 \end{itemize}
 
-The package \tt{FRK} meets these needs by requiring a consistent, straightforward sequence of commands for the analysis, irrespective of whether the multiple datasets in use have different supports or not, irrespective of the manifold being used, irrespective of whether or not a temporal dimension needs to be included or not, and irrespective of the `prediction resolution'. The package is thus designed to be relatively easy to use, with a straightforward model (outlined in Section \ref{sec:theory}), and with the capability of handling large datasets on a standard desktop machine (up to a few hundreds of thousands of data points).
+The package \tt{FRK} meets the needs ot a spatial statistical analyst by requiring a consistent, straightforward sequence of commands for the analysis, irrespective of whether the multiple datasets in use have different supports or not, irrespective of the manifold being used, irrespective of whether or not a temporal dimension needs to be included or not, and irrespective of the `prediction resolution'. The package is thus designed to be relatively easy to use, with a straightforward model (outlined in Section \ref{sec:theory}), and with the capability of handling large datasets on a standard desktop machine (up to a few hundreds of thousands of data points).
 
 The package requires the user to follow the same six steps in each analysis:
 
 \begin{itemize}
-\item {\bf Step 1:} Place the data into a format understood by the packages \tt{sp} or \tt{spacetime}, that is, either \tt{SpatialPointsDataFrame} or \tt{STIDF} for point-referenced data, \tt{SpatialPolygonsDataFrame} for polygon-referenced data.
-\item {\bf Step 2:} Construct a prediction grid of \emph{Basic Areal Units} (BAUs) using \tt{auto\_BAUs}, where each BAU is representative of the smallest scale on which we wish to carry out inference (the process is assumed to be constant within each BAU). The BAUs are of class \tt{SpatialPolygonsDataFrame} for spatial problems, and of class \tt{STFDF} for spatio-temporal problems.
-\item {\bf Step 3:} Construct a set of basis functions using \tt{auto\_basis} regularly or irregularly spaced within the domain of interest. The basis functions can be of various types (e.g., based on bisquare functions) and can be automatically pruned in regions of sparse data.
+\item {\bf Step 1:} Place the data into a format understood by the packages \tt{sp} or \tt{spacetime}, that is, either \tt{SpatialPointsDataFrame} or \tt{STIDF} for point-referenced data, and \tt{SpatialPolygonsDataFrame} for polygon-referenced data.
+\item {\bf Step 2:} Construct a prediction grid of \emph{Basic Areal Units} (BAUs) using \tt{auto\_BAUs}, where each BAU is representative of the smallest scale on which we wish to carry out inference (the process is averaged within each BAU). The BAUs are of class \tt{SpatialPolygonsDataFrame} for spatial problems, and of class \tt{STFDF} for spatio-temporal problems.
+\item {\bf Step 3:} Construct a set of regularly or irregularly spaced basis functions using \tt{auto\_basis}. The basis functions can be of various types (e.g., based on bisquare functions) and can be automatically pruned in regions of sparse data.
 \item {\bf Step 4:} Construct an SRE model using \tt{SRE} from an \tt{R} formula that identifies the response variable and the covariates, the data, the BAUs, and the basis functions.
 \item {\bf Step 5:} Estimate the parameters within the SRE model using \tt{SRE.fit}. Estimation is carried out using the Expectation Maximisation (EM) algorithm.
-\item {\bf Step 6:} Predict either at the BAU level, or over arbitrary polygons specified as \tt{SpatialPolygon}s or \tt{SpatialPolygonDataFrame}s, using \tt{SRE.predict}.
+\item {\bf Step 6:} Predict either at the BAU level, or over arbitrary polygons made up of BAUs specified as \tt{SpatialPolygon}s or \tt{SpatialPolygonDataFrame}s, using \tt{SRE.predict}.
 \end{itemize}
 
 In this vignette we illustrate these six steps, and thus show the versatility of \tt{FRK}, by applying them to both spatial and spatio-temporal datasets with differing supports and on different manifolds. In Section 2 we first present the model, the estimation approach and the prediction equations. In Sections 3 and 4 we consider examples of spatial and spatio-temporal data, respectively. In Section 5 we discuss some additional functionality (e.g., modelling of anisotropic fields) and in Section 6 we discuss package limitations and opportunities for further development.
@@ -1161,7 +1165,7 @@ print(g3)
 Sections 1--4 have introduced the core functionality of \tt{FRK}. The purpose of this section is to present additional functionality that may be of use to the analyst.
 
 
-\subsection{Multiple observations with different support}
+\subsection{Multiple observations with different supports}
 
 The main advantage of using BAUs is that one can make use of multiple datasets with different spatial supports without any added difficulty. Consider the \tt{meuse} dataset. We synthesise observations with a large support by changing the \tt{meuse} object into a \tt{SpatialPolygonsDataFrame}, where each polygon is a square of size 300 m $\times$ 300 m centred around the original \tt{meuse} data point, and with the original value of zinc concentration assigned to it. Once this object is set up, which we name \tt{meuse\_pols}, the analysis proceeds in precisely the same way as in Section \ref{sec:meuse}, but with \tt{meuse\_pols} used instead of \tt{meuse}.
 
@@ -1379,7 +1383,7 @@ print(g2)
 @
 
 
-\subsection{Custom basis functions and BAUs} \label{sec:custom_basis}
+\subsection{Customised basis functions and Basic Areal Units (BAUs)} \label{sec:custom_basis}
 
 The package \tt{FRK} provides the functions \tt{auto\_BAUs} and \tt{auto\_basis} to help the user construct the BAUs and basis functions based on the supplied data. These, however, could be done manually. When doing so it is important that some rules are adhered to: The object containing the basis functions needs to be of class \tt{Basis}. This class contains 5 slots:
 \begin{itemize}
